--- a/about.html
+++ b/about.html
@@ -1,65 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="utf-8">
-    <title>icanhazhostname</title>
-    <style>
-        body {
-            margin: 0;
-            color: #111111;
-            font-family: 'Open Sans',sans-serif;
-            line-height: 1.6;
-            background-color: #f2f2f2;
-            text-align: center;
-        }
-
-        h2 {
-            font-family: Roboto,sans-serif;
-            font-weight: 700;
-            font-size: 3rem;
-            padding-bottom: 5%;
-        }
-
-        .container {
-            width: 60%;
-            margin: 0 auto;
-            padding: 4% 0;
-        }
-
-        .container p {
-            line-height: 2;
-            font-size: 18px;
-            width: 60%;
-            margin: auto;
-            text-align: justify;
-        }
-
-        .bottom-bar p {
-            display: inline-block;
-        }
-
-        a {
-            text-decoration: none;
-        }
-
-        @font-face {
-            font-family: 'Roboto';
-            font-style: normal;
-            font-weight: 700;
-            src: url(https://fonts.gstatic.com/s/roboto/v29/KFOlCnqEu92Fr1MmWUlfBBc4.woff2) format('woff2');
-        }
-
-        @font-face {
-            font-family: 'Open Sans';
-            font-style: normal;
-            font-weight: 400;
-            src: url(https://fonts.gstatic.com/s/opensans/v27/memSYaGs126MiZpBA-UvWbX2vVnXBbObj2OVZyOOSr4dVJWUgsjZ0B4gaVI.woff2) format('woff2');
-        }
-    </style>
-</head>
-<body>
+{{ define "body" }}
     <section>
         <div class="container">
             <h2>icanhazhostname</h2>
@@ -80,6 +19,5 @@
         <p>|</p>
         <p>created by <a href="https://github.com/mylk" target="_blank">mylk</a></p>
     </section>
-</body>
-</html>
+{{ end }}
 
