creates a route to return a result in plain text

--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
     </section>
 
     <section class="bottom-bar">
-        <p><a href="/about" target="_blank">about</a></p>
+        <p>Do you just want <a href="/plain">a hostname in plain text?</a></p>
+    </section>
+
+    <section class="bottom-bar">
+        <p><a href="/about">about</a></p>
         <p>|</p>
-        <p>created by <a href="https://github.com/mylk" target="_blank">mylk</a></p>
+        <p>created by <a href="https://github.com/mylk">mylk</a></p>
     </section>
 {{ end }}
 
