--- a/about.html
+++ b/about.html
@@ -4,18 +4,18 @@
             <h2>icanhazhostname</h2>
 
             <p>
-                I ripped-off <a href="https://github.com/docker/docker-ce/blob/master/components/engine/pkg/namesgenerator/names-generator.go">docker's name generator</a>, to bring it to the web.
+                I ripped-off <a href="https://github.com/docker/docker-ce/blob/master/components/engine/pkg/namesgenerator/names-generator.go" target="_blank">docker's name generator</a>, to bring it to the web.
                 <br /><br />
                 This is my first project in Go.
                 <br />
-                To check the source code, take a look at <a href="https://github.com/mylk/icanhazhostname">the GitHub repository</a>.
+                To check the source code, take a look at <a href="https://github.com/mylk/icanhazhostname" target="_blank">the GitHub repository</a>.
             </p>
 
         </div>
     </section>
 
     <section class="bottom-bar">
-        <p><a href="/" target="_blank">home</a></p>
+        <p><a href="./">home</a></p>
         <p>|</p>
         <p>created by <a href="https://github.com/mylk" target="_blank">mylk</a></p>
     </section>
